[project]
name = "professional-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.13.0",
]
