[project]
name = "professional-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "joblib>=1.5.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "urllib3==1.26.15",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pyinstaller>=6.13.0",
]
